--- a/Web-site.css
+++ b/Web-site.css
@@ -24,7 +24,7 @@ h1{
     border-radius: 20%;
     font-style: oblique;
     font-size: 80%;
-    margin-right: 9%;
+    margin-right: 5%;
     opacity: 1;
     background-color: white;
     transform: scale(1.5) ;
@@ -36,6 +36,7 @@ h1{
     transition: all 1.2s;
     transform: scale(2.2);
     color: black;
+    border: 1px solid black;
 }
 .presentation{
     display: grid;
@@ -43,7 +44,6 @@ h1{
     grid-auto-rows: minmax(100px, auto);
 }
 #img{
-    display: grid;
     grid-column:1/ 4 ;
     grid-row: 1 / 4;
     margin-top: 15px;
@@ -306,21 +306,21 @@ p{
     color: black;
 }
 #form1{
-    margin-left: 30px;
+    margin-left: 52px;
     text-align: center;
     font-size: 100%;
     border-radius: 10px;
 }
 #form2{
     margin-top: 3px;
-    margin-left: 88px;
+    margin-left: 110px;
     text-align: center;
     font-size: 100%;
     border-radius: 10px;
 }
 #form3{
     margin-top: 7px;
-    margin-left: 88px;
+    margin-left: 110px;
     font-size: 100%;
     text-align: center;
     border-radius: 10px;
@@ -330,8 +330,8 @@ p{
     grid-row: 1/6;
 }
 #form4{
-    height: 210px;
-    margin-right: 50px;
+    height: 225px;
+    margin-left: 25px;
     margin-top: 3px;
     border-radius: 7px;
 }
@@ -339,7 +339,8 @@ p{
     border-radius: 10%;
     border: 1px solid rgb(26, 26, 31);
     height: 25px;
-    margin-right: 50px;
+    margin-left: 30px;
+  
 }
 #form6{
     text-align: end;
@@ -377,14 +378,10 @@ p{
 #resume:hover{
     font-style: oblique;
     font-family: 'Optima Italic';
-    font-size: 30px;
+    font-size: 25px;
     transition: all 2.1s;
-    margin-left: 50px;
-    margin-right: 50px;
-}
-#email{
-    display:grid;
-    justify-content: end;
+    margin-left: 20px;
+    margin-right: 0px;
 }
 #last{
     display: grid;  
@@ -418,10 +415,10 @@ p{
 @media screen and(max-width:800px){
     body{
         width: 100%;
-        min-width: 100px;
-        max-width: 150px;
+        min-width: 200px;
+        max-width: 300px;
     }
-    
+   
     #cambio{
         width: 100%;
         min-width: 200px;
