--- a/Web-site.css
+++ b/Web-site.css
@@ -1,6 +1,8 @@
+*{
+    margin: 0px;
+}
 body{
     background-color: rgb(55, 0, 255);
-    transition: all 4.5s;
 }
 h1{
     font-family: 'Engravers Old English';
@@ -20,6 +22,7 @@ h1{
     justify-content: space-evenly;
     align-items:center;
     background-color:  rgba(0, 255, 255, 0.503);
+    width: auto;
 }
 #bullet{
     border: 2px solid black;
@@ -33,6 +36,7 @@ h1{
     transition: all 1.5s;
     color: rgb(4, 0, 255);
     align-items: center;
+    justify-content: space-evenly;
 }
 #bullet:hover{
     transition: all 1.2s;
@@ -118,14 +122,10 @@ p{
 }
 .projects{
     margin-top: 20px;
-     margin-left: 40px;
-     margin-right: 40px;
-    display: grid;
+    margin-left: 40px;
+    margin-right: 40px;
     font-size: 25px;
     color: aliceblue;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-    gap: 10px;
     padding: 30px;
     text-align: center;
     align-items: center;
@@ -133,25 +133,18 @@ p{
 #inicio{
     color: white;
     font-size: 30px;
-    grid-column: 1/3;
-    grid-row: 1/2;
     text-align: center;
 }
 #inicio:hover{
     transition: all 0.7s;
     transform: scale(2.0) ;
-    grid-column: 1/3;
-    grid-row: 1/2;
     text-align: center;
     color: rgba(37, 29, 29, 0.767);
-    
-
 }
 #present{
+    margin-top: 15px;
     color: black;
     font-style: oblique;
-    grid-column: 1/3;
-    grid-row: 2/3;
 }
 #present:hover{
     color: white;
@@ -162,18 +155,20 @@ p{
 #present1{
     color: black;
     font-style: oblique;
-    grid-column: 1/2;
-    grid-row: 3/4;
     text-align: center;
     padding: 10px;
+    margin: 10px;
+    margin-top: 50px;
+    margin-left: 10px;
+}
+.tr80{
+    display: inline-block;
 }
 #more{
     border: 1px solid black;
     background-color: rgba(137, 43, 226, 0.712);
     color: black;
     font-size: 15px;
-    grid-column: 1/2;
-    grid-row: 3/4;
     width: 15%;
     margin-left: 80%;
     margin-top: 50%;
@@ -183,46 +178,49 @@ p{
     transform: scale(1.5);
 }
 #puerto{
-    height: 250px;
-    width: 100%;
+    float: right;
+    margin-top: 20px;
+    margin-left: 10px;
+    height: 300px;
+    width: 370px;
     border-radius: 10px;
-    grid-column: 2/3;
-    grid-row: 3/4;
+    margin-right: 20px;
 }
 #tw-1{
-    height: 100%;
-    width: 100%;
-    grid-column: 1/2;
-    grid-row: 4/6;
+    float: left;
+    height: 280px;
+    width: 470px;
     border-radius: 15%;
     opacity: 0.7;
+    margin-top: 20px;
+    margin-left: 2px;
+   
 }
 #tw-1:hover{
     opacity: 1;
-    transform: scale(0.7);
-    grid-column: 1/3;
-    border-radius: 5%;  
+    transform: scale(1.5);
+    margin-left: 55px;
+    height:280px;
+    width: 340px;
 }
 #tw-2{
-    height:100%;
-    width: 100%;
-    grid-column: 2/3;
-    grid-row: 4/6;
+    height:280px;
+    width: 470px;
     border-radius: 15%;
     opacity: 0.7;
+    margin-top: 20px;
+    margin-right: 20px;  
 }
 #tw-2:hover{
+    margin-top: 80px;
     opacity: 1;
-    transform: scale(0.7);
-    grid-column: 1/3;
-    border-radius: 10%;  
-    
+    transform: scale(1.5);
+    width: 350px;
 }
 #present3{
     color: black;
     font-style: oblique;
-    grid-column: 1/3;
-    grid-row: 6/7;
+    margin-top: 20px;
 }
 #present3:hover{
     color: white;
@@ -233,18 +231,17 @@ p{
 #present4{
     color: black;
     font-style: oblique;
-    grid-column: 1/2;
-    grid-row: 7/8;
     text-align: center;
     padding: 10px;
+    margin: 10px;
+    margin-top: 50px;
+    margin-left: 10px;
 }
 #more1{
     border: 1px solid black;
     background-color: rgba(137, 43, 226, 0.712);
     color: black;
     font-size: 15px;
-    grid-column: 1/2;
-    grid-row: 7/8;
     width: 15%;
     margin-left: 80%;
     margin-top: 50%;
@@ -254,40 +251,43 @@ p{
     transform: scale(1.5);
 }
 #puerto1{
-    height: 250px;
-    width: 100%;
+    float: right;
+    margin-top: 20px;
+    margin-left: 10px;
+    height: 300px;
+    width: 370px;
     border-radius: 10px;
-    grid-column: 2/3;
-    grid-row: 7/8;
+    margin-right: 20px;
 }
 #sn-1{
-    height: 100%;
-    width: 100%;
-    grid-column: 1/2;
-    grid-row: 8/10;
+    float: left;
+    height: 280px;
+    width: 470px;
     border-radius: 15%;
-    opacity: 0.6;
+    opacity: 0.7;
+    margin-top: 20px;
+    margin-left: 2px;
 }
 #sn-1:hover{
     opacity: 1;
-    transform: scale(0.7);
-    grid-column: 1/3;
-    border-radius: 5%; 
-    
+    transform: scale(1.5);
+    margin-left: 55px;
+    height:280px;
+    width: 340px;
 }
 #sn-2{
-    height: 100%;
-    width: 100%;
-    grid-column: 2/3;
-    grid-row: 8/10;
+    height:280px;
+    width: 470px;
     border-radius: 15%;
-    opacity: 0.6;
+    opacity: 0.7;
+    margin-top: 20px;
+    margin-right: 20px;  
 }
 #sn-2:hover{
+    margin-top: 80px;
     opacity: 1;
-    transform: scale(0.7);
-    grid-column: 1/3;
-    border-radius: 10%;  
+    transform: scale(1.5);
+    width: 350px;
 }
 #child-bullet{
     font-style: oblique;
@@ -304,27 +304,37 @@ p{
     transform: scale(2.2);
     color: black;
 }
-
 #form1{
-    margin-top: 210px;
     text-align: center;
-    font-size: 100%;
+    font-size: 20px;
     border-radius: 10px;
-    
+    margin-left: 50%;   
+}
+#form1:hover{
+    transition: all 1.0s;
+    transform: scale(1.5);
 }
 #form2{
     margin-top: 2px;
-    margin-left: 273px; 
+    margin-left: 50%; 
     text-align: center;
-    font-size: 100%;
+    font-size: 20px;
     border-radius: 10px;
 }
+#form2:hover{
+    transition: all 1.0s;
+    transform: scale(1.5);
+}
 #form3{
-    margin-top: 25px;
-    margin-left: 760px;
-    font-size: 100%;
+    margin-top: 10px;
+    margin-left: 50%;
+    font-size: 20px;
     text-align: center;
     border-radius: 10px;
+}
+#form3:hover{
+    transition: all 1.0s;
+    transform: scale(1.5);
 }
 #point{
    float: left;
@@ -333,23 +343,32 @@ p{
 #form4{
     height: 225px;
     margin-top: 3px;
-    margin-left: 150px;
-    margin-right: 50%;
+    margin-left: 50%;
     border-radius: 7px;
+    margin-right: 20px;
+    font-size: 15px;
+}
+#form4:hover{
+    transition: all 1.0s;
+    transform: scale(1.5);
 }
 #form5{
     border-radius: 10%;
     border: 1px solid rgb(26, 26, 31);
     height: 25px;
-    /* margin-left: 30px; */
+    margin-left: 50%;
+    font-size: 17px;
   
 }
+#form5:hover{
+    transition: all 1.0s;
+    transform: scale(1.5);
+    background-color: blueviolet;
+}
 #form6{
-    
-    font-size: 20px;
-    margin-left: 200px;
-   
-   
+    margin-top: 270px;
+    font-size: 25px;
+    margin-left:50%; 
 }
 #Hpage{
     height: 30px; 
@@ -415,13 +434,20 @@ p{
 
 }
 
-@media screen and(max-width:800px) and (min-width: 500px){
+@media screen and(max-width:800px) and (min-width: 600px){
     body{
         width: 100%;
         min-width: 200px;
         max-width: 300px;
-        transition: all 4.5s;
-        background-color: rgb(168, 104, 104);
+    }
+    @media screen and(orientation: landscape){
+        body{
+            transition: all 4.5s;
+            background-color: rgb(241, 22, 22);
+        }
+        h1{
+            color: blue
+        }
     }
     #cambio{
         width: 100%;
@@ -441,12 +467,4 @@ p{
     
    
 }
-@media screen and(orientation: landscape){
-    body{
-        transition: all 4.5s;
-        background-color: rgb(168, 104, 104);
-    }
-    h1{
-        color: blue
-    }
-}
+
