--- a/Web-site.css
+++ b/Web-site.css
@@ -2,7 +2,7 @@
     margin: 0px;
 }
 body{
-    background-color: rgb(55, 0, 255);
+    background-color: rgba(236, 10, 10, 0.892);
 }
 h1{
     font-family: 'Engravers Old English';
@@ -22,7 +22,6 @@ h1{
     justify-content: space-evenly;
     align-items:center;
     background-color:  rgba(0, 255, 255, 0.503);
-    width: auto;
 }
 #bullet{
     border: 2px solid black;
@@ -55,6 +54,11 @@ h1{
     border-radius: 50%;
     border: 2px solid black;
     width: 260px; 
+    transition: all 0.8s;
+}
+#img:hover{
+    transition: all 1.0s;
+    transform: scale(1.2);
 }
 h2{
     text-align: center;
@@ -65,10 +69,17 @@ p{
     word-wrap: break-word;
     font-size: 20px;
     text-align: center;
+    margin-top: -15px;
 }
 .pdf{
     font-size: 27px;
     text-align: center;
+    margin-top: 20px;
+}
+#blind{
+    color: aliceblue;
+    text-align: left;
+    margin-left: 15px;
 }
 #cambio{
     background-image: url(images/gif/a2b20cad9728d2ea8fb07e1e0a8b00c8.gif) ;
@@ -134,6 +145,7 @@ p{
     color: white;
     font-size: 30px;
     text-align: center;
+    transition: all 0.5s;
 }
 #inicio:hover{
     transition: all 0.7s;
@@ -145,6 +157,7 @@ p{
     margin-top: 15px;
     color: black;
     font-style: oblique;
+    transition: all 0.7s;
 }
 #present:hover{
     color: white;
@@ -158,7 +171,7 @@ p{
     text-align: center;
     padding: 10px;
     margin: 10px;
-    margin-top: 50px;
+    margin-top: 60px;
     margin-left: 10px;
 }
 .tr80{
@@ -221,6 +234,7 @@ p{
     color: black;
     font-style: oblique;
     margin-top: 20px;
+    transition: all 0.7s;
 }
 #present3:hover{
     color: white;
@@ -234,7 +248,7 @@ p{
     text-align: center;
     padding: 10px;
     margin: 10px;
-    margin-top: 50px;
+    margin-top: 60px;
     margin-left: 10px;
 }
 #more1{
@@ -440,15 +454,6 @@ p{
         min-width: 200px;
         max-width: 300px;
     }
-    @media screen and(orientation: landscape){
-        body{
-            transition: all 4.5s;
-            background-color: rgb(241, 22, 22);
-        }
-        h1{
-            color: blue
-        }
-    }
     #cambio{
         width: 100%;
         min-width: 200px;
@@ -468,3 +473,12 @@ p{
    
 }
 
+@media screen and(orientation: landscape){
+    body{
+        transition: all 4.5s;
+        background-color: rgb(241, 22, 22);
+    }
+    h1{
+        color: blue
+    }
+}
