--- a/Web-site.css
+++ b/Web-site.css
@@ -56,7 +56,7 @@ h1{
     margin: 25px;
     border-radius: 50%;
     border: 2px solid black;
-    width: 220px; 
+    width: 275px; 
     transition: all 0.8s;
 }
 #img:hover{
@@ -67,16 +67,30 @@ h2{
     text-align: center;
     font-size: 25px;
     margin-top:  150px;
+    color: #e3e3e3;
 }
 p{
     word-wrap: break-word;
     font-size: 20px;
     text-align: center;
+    color: #e3e3e3;
 }
 .pdf{
     font-size: 27px;
     text-align: center;
     margin-top: 20px;
+}
+#info{
+    color: red;
+}
+#pursuit{
+    color: red;
+}
+#instagram{
+    color: red;
+}
+#dance{
+    color: red;
 }
 #blind{
     color: aliceblue;
@@ -421,6 +435,24 @@ p{
     h1{
         color: blue;
         font-family: 'Engravers Old English';
+    }
+    p{
+        color:black
+    }
+    h2{
+        color:black 
+    }
+    #info{
+        color: blue;
+    }
+    #pursuit{
+        color:blue;
+    }
+    #instagram{
+        color: blue;
+    }
+    #dance{
+        color: blue;
     }
     
 }
