--- a/Web-site.css
+++ b/Web-site.css
@@ -150,18 +150,12 @@ p{
 }
 #present{
     margin-top: 15px;
-    color: black;
+    color: #e3e3e3;
     font-style: oblique;
     transition: all 0.7s;
 }
-#present:hover{
-    color: white;
-    transform: scale(1.4);
-    transition: all 1.0s;
-
-}
 #present1{
-    color: black;
+    color: #e3e3e3;
     font-style: oblique;
     margin-top: 70px;
     text-align: center;
@@ -222,19 +216,13 @@ p{
     width: 350px;
 }
 #present3{
-    color: black;
+    color:#e3e3e3;
     font-style: oblique;
     margin-top: 20px;
     transition: all 0.7s;
 }
-#present3:hover{
-    color: white;
-    transform: scale(1.4);
-    transition: all 1.0s;
-
-}
 #present4{
-    color: black;
+    color: #e3e3e3;
     font-style: oblique;
     text-align: center;
     padding: 10px;
@@ -299,28 +287,37 @@ p{
 }
 #form1{
     text-align: center;
-    font-size: 20px;
     border-radius: 10px;
-    margin-left: 50%;   
+    margin-top: 2px;
+    font-size: 25px; 
+   
+}
+.form1{
+    grid-column: 2/2; 
+    grid-row: 1/2;
 }
 #form1:hover{
     transition: all 1.0s;
     transform: scale(1.5);
 }
 #form2{
-    margin-top: 2px;
-    margin-left: 50%; 
     text-align: center;
-    font-size: 20px;
     border-radius: 10px;
+    margin-top: 2px;
+    font-size: 25px; 
+    grid-column: 1/23; 
+    grid-row: 3/3;
 }
 #form2:hover{
     transition: all 1.0s;
     transform: scale(1.5);
 }
+.form2{
+    grid-column: 2/2; 
+    grid-row: 2/3;
+}
 #form3{
     margin-top: 10px;
-    margin-left: 50%;
     font-size: 20px;
     text-align: center;
     border-radius: 10px;
@@ -329,25 +326,32 @@ p{
     transition: all 1.0s;
     transform: scale(1.5);
 }
+.form3{
+    grid-column: 2/2; 
+    grid-row: 3/4;
+}
 #form4{
-    height: 225px;
+    height: 200px;
     margin-top: 3px;
-    margin-left: 50%;
     border-radius: 7px;
-    margin-right: 20px;
+    margin-right: 10px;
     font-size: 15px;
 }
 #form4:hover{
     transition: all 1.0s;
     transform: scale(1.5);
 }
+.form4{
+    grid-column: 2/2; 
+    grid-row: 4/6;
+}
 #form5{
     border-radius: 10%;
     border: 1px solid rgb(26, 26, 31);
     height: 25px;
-    margin-left: 50%;
     font-size: 17px;
-  
+    grid-column: 2/2; 
+    grid-row: 6/7;
 }
 #form5:hover{
     transition: all 1.0s;
@@ -355,9 +359,11 @@ p{
     background-color: blueviolet;
 }
 #form6{
-    margin-top: 270px;
-    font-size: 25px;
-    margin-left:50%; 
+    margin-top: 2px;
+    font-size: 25px; 
+    grid-column: 1/2; 
+    grid-row: 1/2;
+    text-align: center;
 }
 #Hpage{
     height: 30px; 
@@ -400,10 +406,13 @@ p{
     padding: 10px;
     margin-top: 15px; 
 }
-#norma{
+#norm{
     /* float: right; */
     margin-top: 45px;
-   
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    justify-items: center;
 }
 #fellow:hover{
     color: white;
@@ -453,6 +462,18 @@ p{
     }
     #dance{
         color: blue;
+    }
+    #present{
+        color: black;
+    }
+    #present1{
+        color: black;
+    }
+    #present3{
+        color: black;
+    }
+    #present4{
+        color: black;
     }
     
 }
