--- a/Web-site.css
+++ b/Web-site.css
@@ -360,6 +360,7 @@ p{
     grid-row: 6/7;
     margin-top: 15px;
     transition: all 1.5s;
+    background-color: #e3e3e3;
 }
 #form5:hover{
     transition: all 1.0s;
@@ -509,6 +510,7 @@ p{
         font-size: 20px;
     }
     #form5{
+        color: white;
         transition: all 1.5s;
         height: 30px;
         font-size: 20px;
