--- a/Web-site.css
+++ b/Web-site.css
@@ -136,6 +136,7 @@ p{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: minmax(100px, auto);
+    transition: all 1.5s;
 }
 #inicio{
     color: white;
@@ -512,6 +513,176 @@ p{
     #Hpage{
         filter: invert(1%);
     }
+    .projects{
+        margin-top: 20px;
+        font-size: 25px;
+        color: aliceblue;
+        padding: 15px;
+        text-align: center;
+        justify-items: center;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: minmax(100px, auto);
+        transition: all 1.5s;
+    }
+    #inicio{
+        color: white;
+        font-size: 30px;
+        text-align: center;
+        transition: all 0.5s;
+        grid-column: 1/3;
+        grid-row: 1/2;
+    }
+    #inicio:hover{
+        transition: all 0.7s;
+        transform: scale(2.0) ;
+        text-align: center;
+        color: rgba(37, 29, 29, 0.767);
+    }
+    #present{
+        margin-top: 15px;
+        color: black;
+        font-style: oblique;
+        transition: all 0.7s;
+        grid-column: 1/3;
+        grid-row: 2/3;
+    }
+    #present1{
+        color: black;
+        font-style: oblique;
+        text-align: center;
+        grid-column: 1/2;
+        grid-row: 3/4;
+        margin: auto;
+    }
+    #more{
+        border: 1px solid black;
+        background-color: rgba(137, 43, 226, 0.712);
+        color: black;
+        height: 25px;
+        margin: auto;
+        font-size: 15px;
+        grid-column: 1/3;
+        grid-row: 4/5;
+    }
+    #more:hover{
+        transition: all 1.5s;
+        transform: scale(1.5);
+    }
+    #puerto{
+        margin: auto;
+        height: 320px;
+        width: 420px;
+        border-radius: 10px;
+        grid-column: 2/3;
+        grid-row: 3/4;
+    }
+    #tw-1{
+        height: 320px;
+        width: 420px;
+        border-radius: 15%;
+        opacity: 0.7;
+        margin-top: 5px;
+        margin-left: 2px;
+        grid-column: 1/2;
+        grid-row: 5/6;
+       
+    }
+    #tw-1:hover{
+        margin-top: 40px;
+        opacity: 1;
+        transform: scale(1.5);
+        height: 250px;
+        width: 370px;
+    }
+    #tw-2{
+        height:320px;
+        width: 420px;
+        border-radius: 15%;
+        opacity: 0.7;
+        margin-top: 5px;  
+        grid-column: 2/3;
+        grid-row: 5/6;
+    }
+    #tw-2:hover{
+        margin-top: 40px;
+        opacity: 1;
+        transform: scale(1.5);
+        height: 250px;
+        width: 370px;
+    }
+    #present3{
+        margin: auto;
+        color:black;
+        font-style: oblique;
+        transition: all 0.7s;
+        grid-column: 1/3;
+        grid-row: 6/7;
+    }
+    #present4{
+        margin: auto;
+        color: black;
+        font-style: oblique;
+        text-align: center;
+        grid-column: 1/2;
+        grid-row: 7/8;
+    }
+    #more1{
+        border: 1px solid black;
+        background-color: rgba(137, 43, 226, 0.712);
+        color: black;
+        height: 25px;
+        margin: auto;
+        font-size: 15px;
+        grid-column: 1/3;
+        grid-row: 8/9;
+    }
+    #more1:hover{
+        transition: all 1.5s;
+        transform: scale(1.5);
+    }
+    #puerto1{
+        margin: auto;
+        height: 320px;
+        width: 420px;
+        border-radius: 10px;
+        grid-column: 2/3;
+        grid-row: 7/8;
+    }
+    #sn-1{
+        height:320px;
+        width: 420px;
+        border-radius: 15%;
+        opacity: 0.7;
+        margin-top: 5px; 
+        grid-column: 1/2;
+        grid-row: 9/10;
+    }
+    #sn-1:hover{
+        margin-top: 40px;
+        opacity: 1;
+        transform: scale(1.5);
+        height: 250px;
+        width: 370px;
+    }
+    #sn-2{
+        height:320px;
+        width: 420px;
+        border-radius: 15%;
+        opacity: 0.7;
+        margin-top: 5px; 
+        grid-column: 2/3;
+        grid-row: 9/10;
+    }
+    #sn-2:hover{
+        margin-top: 40px;
+        opacity: 1;
+        transform: scale(1.5);
+        height: 250px;
+        width: 370px;
+    }
+
+
    
 
 
